# ditto

./: .gitignore  .golangci.yml  .goreleaser.yaml  .markdownlint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ditto.yaml.example  go.mod  go.sum
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-javascript-sdk.yml  release-python-sdk.yml  release.yml
actions/create/: action.yml
actions/delete/: action.yml
cmd/: copy.go  copy_run.go  daemon.go  doctor.go  doctor_test.go  env.go  erd.go  host.go  init.go  reseed.go  root.go  root_test.go  serve.go  server_url.go  server_url_test.go  status.go  target.go
cmd/ditto/: main.go
docs/: README.md  ci.md  configuration.md  local-dev.md  operations.md
docs/explanation/: architecture.md
docs/how-to/: operate-a-ditto-host.md  troubleshoot.md  use-ditto-for-local-development.md  use-ditto-in-ci.md
docs/reference/: cli.md  configuration.md
docs/tutorials/: demonstrate-obfuscation-end-to-end.md  run-your-first-copy.md
engine/: engine.go  registry.go  registry_test.go
engine/mariadb/: mariadb.go
engine/mysql/: integration_test.go  mysql.go
engine/postgres/: integration_test.go  postgres.go
hooks/: post-job.sh  pre-job.sh
internal/apiv2/: types.go
internal/config/: config.go  config_test.go
internal/copy/: client.go  http_client.go  integration_test.go  (+5 more)
scripts/: govulncheck.sh
sdk/python/: README.md  pyproject.toml
sdk/python/ditto/: __init__.py  client.py  pytest_plugin.py
(+42 files in other folders)
