[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ditto-sdk"
version = "0.1.0"
description = "Python client for the ditto ephemeral database copy service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
pytest = ["pytest>=7"]

[project.entry-points."pytest11"]
ditto = "ditto.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["ditto*"]
