[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ditto-sdk"
version = "0.2.0"
description = "Python client for the ditto ephemeral database copy service"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/attaradev/ditto/tree/main/sdk/python"
Repository = "https://github.com/attaradev/ditto"
Issues = "https://github.com/attaradev/ditto/issues"

[project.optional-dependencies]
pytest = ["pytest>=7"]

[project.entry-points."pytest11"]
ditto = "ditto.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["ditto*"]
